small config update for v19

--- a/el7_nextcloud/tasks/packages_install.yml
+++ b/el7_nextcloud/tasks/packages_install.yml
@@ -78,6 +78,8 @@
       - php-pecl-apcu
       - php-smbclient
       - php-ldap
+      - php-bcmath 
+      - php-gmp
       - policycoreutils-python
       - libsemanage-python
     state: present
