--- a/el7_nextcloud/templates/nextcloud.conf
+++ b/el7_nextcloud/templates/nextcloud.conf
@@ -38,6 +38,9 @@ server {
     add_header X-Download-Options noopen;
     add_header X-Permitted-Cross-Domain-Policies none;
     add_header Referrer-Policy no-referrer;
+    add_header Strict-Transport-Security "max-age=15552000";
+    # used with reverse proxy:
+    add_header Strict-Transport-Security "max-age=15552000";
 
     # Remove X-Powered-By, which is an information leak
     fastcgi_hide_header X-Powered-By;
